Overflow fixing

--- a/styles.css
+++ b/styles.css
@@ -255,11 +255,6 @@ li {
     overflow: hidden;
 }
 
-.wrapper {
-    position: relative;
-    min-height: min-content;
-}
-
 .temporary-text {
     color: yellow;
 }
@@ -318,7 +313,6 @@ li {
 
 .section-change-container {
     position: relative;
-    display: flex;
     width: 100vw;
     margin: var(--scale4) 0;
     transform: translateX(calc(-1 * var(--scale2)));
@@ -326,6 +320,8 @@ li {
 }
 
 .section-change-wrapper {
+    position: relative;
+    width: 100%;
     color: transparent;
     font-family: var(--headingFont);
     font-size: 7rem;
